fix dark mode

--- a/my_portfolio/src/style/main.css
+++ b/my_portfolio/src/style/main.css
@@ -1,8 +1,19 @@
 /* dark mode */
 body.dark{
-    background-color: rgba(8, 8, 8, 0.859);
+    background-color: #0f0f0fb7;
     h1, h2, h3, h4, h5, h6, p, a, li, span, button, input, textarea, select, option, label {
         color: rgb(177, 177, 177);
+    }
+    .hero{
+        background-color: rgba(8, 8, 8, 0.759);
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s ease;
+        
+    }
+    .next-section{
+        background-color: rgba(40, 40, 40, 0.3);
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s ease;
     }
     .sidebar{
         background-color: rgba(186, 186, 186, 0.574);
@@ -10,13 +21,44 @@ body.dark{
         transition: 0.3s ease;
     }
     .about{
-        background-color: rgba(186, 186, 186, 0.574);
+        background-color: #0f0f0f;
         box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
         transition: 0.3s ease;
         
         p,h2{
             color: rgba(255, 255, 255, 0.729);
         }
+    }
+    .projects{
+      background-color: #0f0f0fb7;
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+      transition: 0.3s ease;
+      padding: 20px;
+
+      .project{
+        background-color: rgba(8, 8, 8, 0.759);
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s ease;
+      }
+    }
+    #hobbies{
+        
+      .card{
+        background-color: rgba(105, 104, 104, 0.343);
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s ease;
+      }
+    }
+    .skills{
+        background-color: #0f0f0f;
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s ease;
+        padding: 20px;
+    }
+    .contact{
+        background-color: #0f0f0f;
+        box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s ease;
     }
 }
 
